internal/render/testdata/deploybot-web/k8s/deploybot-web/base/deployment.yaml
# Generated by deploybot. Do not edit.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploybot-web
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: deploybot-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: deploybot-web
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: deploybot
        app.kubernetes.io/name: deploybot-web
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: web
          image: ghcr.io/ianunruh/deploybot-web:main
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
