internal/render/testdata/deploybot-web/k8s/deploybot-web/base/httproute.yaml
# Generated by deploybot. Do not edit.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deploybot-web
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: deploybot-web
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - deploy.k8s.kcloud.zone
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 3600s
      backendRefs:
        - name: deploybot-web
          port: 3000
