internal/render/testdata/deploybot-web/k8s/deploybot-web/base/service.yaml
# Generated by deploybot. Do not edit.
apiVersion: v1
kind: Service
metadata:
  name: deploybot-web
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: deploybot-web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
